Corolário do Teorema da Convergencia Monótona

--- a/documento.tex
+++ b/documento.tex
@@ -171,13 +171,12 @@
 	\imprimirfolhaderosto{}
 	%\imprimirfichacatalografica{elementos-pre-textuais/Ficha_Catalograficaelizandra}
 	%\imprimirfolhadeaprovacao{}
-        %\imprimirdedicatoria{elementos-pre-textuais/dedicatoria}
+    \imprimirdedicatoria{elementos-pre-textuais/dedicatoria}
 	%\imprimiragradecimentos{elementos-pre-textuais/agradecimentos}
 	%\imprimirepigrafe{elementos-pre-textuais/epigrafe}
 	%\imprimirresumo{elementos-pre-textuais/resumo}
 	%\imprimirabstract{elementos-pre-textuais/abstract}
 	\imprimirlistadeilustracoes
-	\input{elementos-pre-textuais/simbolos.tex}
 	\imprimirsumario
 	
 	%Elementos textuais
