--- a/elementos-pre-textuais/dedicatoria.tex
+++ b/elementos-pre-textuais/dedicatoria.tex
@@ -1,6 +1,8 @@
 
 \begin{flushright}
-Ao meu remanescente neurônio que sobreviveu à esta loucura.
+\justify
+Aos meus amados pais que foram a base sólida que sustentou e as asas que me impulsionaram.
+Com amor e gratidão, dedico este trabalho a vocês, cujo apoio incondicional e compreensão transcendem qualquer barreira acadêmica. 
 \end{flushright}
 
 
