--- a/lib/preambulo.tex
+++ b/lib/preambulo.tex
@@ -34,7 +34,7 @@
 \usepackage{pgfplots}
 \usetikzlibrary{positioning,shapes,fit,calc}
 \usetikzlibrary{patterns}
-
+\usepackage{ragged2e}
 \usepackage{booktabs}                               % Comandos para tabelas
 \usepackage{verbatim}                               % Texto é interpretado como escrito no documento
 \usepackage{multirow, array}                        % Múltiplas linhas e colunas em tabelas
