correções do capítulo 1 (Claudemir Version) + Continuação do último capítulo

--- a/elementos-pre-textuais/dedicatoria.tex
+++ b/elementos-pre-textuais/dedicatoria.tex
@@ -1,7 +1,7 @@
 
 \begin{flushright}
 \justify
-Aos meus amados pais que foram a base sólida que sustentou e as asas que me impulsionaram.
+Aos meus amados pais que foram a base sólida que me sustentou e as asas que me impulsionaram.
 Com amor e gratidão, dedico este trabalho a vocês, cujo apoio incondicional e compreensão transcendem qualquer barreira acadêmica. 
 \end{flushright}
 
