--- a/elementos-textuais/espacos-funcoes-mensuraveis.tex
+++ b/elementos-textuais/espacos-funcoes-mensuraveis.tex
@@ -1,16 +1,11 @@
 \chapter{Espaços e Funções Mensuráveis}
 
-Nesta seção é apresentado um preambulo para a teoria medida.
+Nesta seção é apresentado um preâmbulo para a teoria medida.
 Iniciaremos definindo \sigal para que possamos construir espaços mensuráveis.
-Em seguida, abordaremos as funções mensurável.
+Em seguida, abordaremos as funções mensuráveis.
 Todas as definições e resultados aqui explorados tiveram como principais fontes \cite{elon}, \cite{bartle} e \cite{magalhaes}.
 
 \section{O Conceito de \sigal}
-Saber o que é uma \sigal e conseguir identificá-la em um espaço mensurável é fundamental para esta teoria.
-Com isso, esta seção é dedicada para explorar definição, exemplos e propriedades sobre essa.
-Vale ressaltar que é esperado que o leitor esteja familiarizado com a teoria elementar de conjuntos, bem como os conceitos principais de cálculo diferencial e integral.
-Mesmo assim, em alguns momentos alguns conceitos e propriedades particulares são retomadas.
-
 % Definição de Sigma álgebra
 \begin{definition}
 \label{def:sigma-algebra}
@@ -26,7 +21,7 @@ Mesmo assim, em alguns momentos alguns conceitos e propriedades particulares sã
 
 \end{definition}
 
-Um par ordenado $(X, \mathcal{C})$  constituído de um conjunto $X$ e uma \sigal sobre $X$ é chamado de  \textbf{espaço mensurável} . \index{espaço mensurável}
+Um par ordenado $(X, \mathcal{C})$  constituído de um conjunto $X$ e uma \sigal sobre $X$ é chamado de  \textbf{espaço mensurável}. \index{espaço mensurável}
 Além disso, cada elemento deste espaço é chamado de conjunto $\mathcal{C}-$mensurável.
 Quando não houver confusão ou quando a \sigal estiver fixada, dizemos simplesmente que cada elemento é um conjunto mensurável.
 
@@ -36,32 +31,14 @@ Quando não houver confusão ou quando a \sigal estiver fixada, dizemos simplesm
 \end{remark}
 
 % União finita de elemento da sigma algebra
-\begin{proposition}
-\label{prop:sigma-união-finita}
+\begin{remark}
+\label{obs:sigma-união-finita}
     Seja $\mathcal{C}$ uma \sigal de um conjunto $X$. Se $A_1, ..., A_n$ são todos elementos quaisquer de $\mathcal{C}$, então $\displaystyle \bigcup_{j = 1}^n A_j$ é um elemento de $\mathcal{C}$.
-\end{proposition}
-\begin{prova}
-	Seja $A_1,\ldots, A_n$ elementos de $\cc$. 
-	Construa uma sequência $(B_n)$ tal que $B_j = A_j$ para todo $j \in I_n$ e $A_{n + 1} = A_{n + 2} = \cdots = \varnothing$.
-	Desta forma, pelo item \textit{(iii)} da definição de \sigal, temos que 
-	$
-	\displaystyle\bigcup_{j = 1}^\infty B_j = \bigcup_{j = 1}^n A_j
-	$.
-	Como $\displaystyle \bigcup_{j = 1}^\infty B_j \in \cc $, segue que 
-	$\displaystyle \bigcup_{j = 1}^n A_j \in \cc $.
-\end{prova}
+\end{remark}
 
-%\begin{remark}
-%	Às vezes, por praticidade, denotaremos a união enumerável infinita de uma família de elementos $(E_n)$ de uma \sigal $\cc$ como 
-%	$\displaystyle \bigcup_{n \in \N} E_n$ ao invés de 
-%	$\displaystyle \bigcup_{j = 1}^\infty E_n$.
-%	A mesma convenção pode ser aplicada para interseção.
-%\end{remark} 
-% 
- 
 % Exemplos de Sigmas Algebras 
 \begin{example}
-    Seja $X = \{-1,0,-1\}$. Se considerarmos $\mathcal{C} = \{\varnothing, X, \{0\}, \{-1,1\}\}$, temos que $(X, \mathcal{C})$ é um espaço mensurável.
+    Seja $X = \{-1,0,1\}$. Se considerarmos $\mathcal{C} = \{\varnothing, X, \{0\}, \{-1,1\}\}$, temos que $(X, \mathcal{C})$ é um espaço mensurável.
 \end{example}
 
 \begin{example}
@@ -81,10 +58,10 @@ Para evidenciar essa percepção, observe o exemplo a seguir:
 
 \begin{example}
 	\label{ex:sigma-subconjuntos}
-	Seja $X$ dado de maneira arbitrária conforme o exemplo anterior.
-	Considere, agora, o conjunto $\mathcal{C}_2 = \{ A; \ A \subset X\}$, ou seja, o conjunto formado por todos os subconjuntos do conjunto $X$.
+	Seja $X$ conforme o exemplo anterior.
+	Considere, agora, o conjunto $\mathcal{C}_2 = \{ A; \ A \subset X\}$, ou seja, o conjunto formado por todos os subconjuntos do conjunto $X$
 	%
-	\footnote{O conjunto $\cc_2$ também é chamado de conjunto das partes de $X$ e, as vezes, é representado por $\mathcal{P}(X)$.}
+	\footnote{O conjunto $\cc_2$ também é chamado de conjunto das partes de $X$ e, as vezes, é representado por $\mathcal{P}(X)$.}.
 \end{example}
 
 Sabemos que $\varnothing \subset X$ e $X \subset X$. 
@@ -112,16 +89,14 @@ Será que se construirmos $Z$ um conjunto que contenha $\varnothing$ e $X$ e out
 Sem dúvida, $\varnothing, X \in \mathcal{C}$. 
 Entretanto, perceba que $\{x\} \in \mathcal{C}$, mas $\{x\}^c \notin \mathcal{C}$.
 De fato, 
-$$
+$
 \{x\}^c
 =\{x,y,z\} 
 -\{x\} 
 = \{y,z\}.
-$$
+$
 Entretanto, $\{y,z\} \notin \mathcal{C}$.
-Assim, a segunda condição da definição \ref{def:sigma-algebra} não é satisfeita impossibilitando que $\mathcal{C}$ seja uma \sigal de $X$.
-Com isso, podemos ver que uma \sigal não é construída de maneira tão trivial.
-Entretanto, ás vezes, em matemática, é interessante conseguirmos induzir, em algum conjunto, uma propriedade que desejamos. 
+Assim, a segunda condição da definição \ref{def:sigma-algebra} não é satisfeita, impossibilitando que $\mathcal{C}$ seja uma \sigal de $X$.
 A proposição adiante nos mostra como podemos induzir uma \sigal com um conjunto fixado não vazio em um conjunto.
 
 % Assim, pode ser preciso construir uma \sigal em algum momento com um conjunto $A$ específico.
@@ -135,7 +110,7 @@ A proposição adiante nos mostra como podemos induzir uma \sigal com um conjunt
 \end{proposition}
 
 \begin{prova}
-    Perceba que as condições \textit{(i)} e \textit{(ii)} da definição \ref{def:sigma-algebra} são satisfeitas pela forma que o conjunto  $\mathcal{C}$ foi construído. Para verificar a última condição, basta perceber $A \cup A^c = X$. Assim, as sequências construídas terão comportamento análogo as do exemplo \ref{ex:sigma-subconjuntos}. Portanto, $\mathcal{C}$ é uma \sigal de $X$ para qualquer que seja $ \varnothing \neq A \subset X$.
+    Perceba que as condições \textit{(i)} e \textit{(ii)} da definição \ref{def:sigma-algebra} são satisfeitas pela forma que o conjunto  $\mathcal{C}$ foi construído. Para verificar a última condição, basta perceber $A \cup A^c = X$. Portanto, $\mathcal{C}$ é uma \sigal de $X$ para qualquer que seja $ \varnothing \neq A \subset X$.
 \end{prova}
 
 \begin{example}
@@ -143,20 +118,15 @@ A proposição adiante nos mostra como podemos induzir uma \sigal com um conjunt
     Sejam $P =\{2k; \ k \in \N\}$ e $I = \{2k - 1;\ k \in \N\}$. 
     Como $P^c = I$, então $\mathcal{C} = \{\varnothing, \N, P, I\}$ é uma \sigal de $\N$ pela proposição anterior.
 \end{example}
-
-Observe que o conjunto $A$ que apresentamos na proposição \ref{prop:sigma-complementar} é um subconjunto não vazio do conjunto $X$ que fora tomado arbitrariamente. 
-\footnote{Observe que se $A = \varnothing$, a \sigal é a mesma do exemplo \ref{ex:sigma-trivial}.}
-Uma pergunta intuitiva é: se tomarmos um conjunto $A$ que não é subconjunto de $X$ o espaço $(X, \mathcal{C})$ continua sendo mensurável? A resposta é não.
-Se o conjunto $A$ não for subconjunto de $X$ não temos como garantir a validade da condição \textit{(ii)}  da definição \ref{def:sigma-algebra}, pois  $A^c$ não é necessariamente um subconjunto de $X$ o que não permitiria os argumentos usados anteriormente na proposição \ref{prop:sigma-complementar}.
  
-Dito isso, note que a definição \ref{def:sigma-algebra} e a proposição \ref{prop:sigma-união-finita} tratam apenas da união enumerável ou finita, respectivamente. 
+Note que a definição \ref{def:sigma-algebra} trata apenas da reunião de enumerável de elementos da $\sigma$-álgebra. 
 Nosso interesse, agora, é investigar se conseguirmos propriedades análogas para a operação de interseção. 
-Iniciaremos verificando o comportamento de interseção de elementos de uma \sigal com a proposição adiante.
+Iniciaremos verificando o comportamento de interseção de elementos de uma \sigal com a seguinte proposição.
 % Propriedades de Interseção 
 
 \begin{proposition}
 \label{prop:interseção-elementos-sigmas}
-    Seja $X$ um conjunto e $\mathcal{C}$ uma \sigal desse conjunto.
+    Seja $(X, \cc)$ um espaço mensurável.
     Se $(A_j)$ é uma sequência  de conjuntos $\mathcal{C} $-mensuráveis, então $\displaystyle \bigcap_{j = 1}^\infty A_j$ é um elemento $\mathcal{C}$-mensurável.
 \end{proposition}
 \begin{prova}
@@ -179,11 +149,12 @@ Assim, observamos que
 $$
 \mathcal{C} = \displaystyle \bigcap_{\mathcal{F} \supset A} \mathcal{F}.
 $$
-Esta \sigal $\mathcal{C}$   definimos como a \textit{menor} \sigal gerada por $A$. \index{gerada por um conjunto}
+Esta \sigal $\mathcal{C}$   definimos como a \textit{menor} \sigal gerada por $A$ \index{gerada por um conjunto}
 %
-\footnote{Lembre que a noção de \enquote{menor} aqui é trazida por meio da relação de ordem parcial gerada pela relação de inclusão entre conjuntos.}
+\footnote{Lembre que a noção de \enquote{menor} aqui é trazida por meio da ordem parcial gerada pela relação de inclusão entre conjuntos.}.
 %
-Sabendo que a menor \sigal é gerada por meio de intersecções é natural questionarmos se a interseção entre \sigals ainda é uma \sigal de $X$.Para responderemos à esta pergunta com a proposição adiante.
+Sabendo que a menor \sigal é gerada por meio de intersecções é natural questionarmos se a interseção entre \sigals ainda é uma \sigal de $X$.
+Responderemos à esta pergunta com a proposição adiante.
 
 %Interseção de Sigmas algebras
 \begin{proposition}
@@ -305,26 +276,26 @@ Se tomarmos um $a \in \R$ fixo, com $a<b$, então a decomposição do intervalo 
 	}	
 \end{figure}\\
 
-Embora a decomposição de intervalos reais pela união de outros é extremamente relevante para mostrar a seguinte equivalência sobre a \sigal de Borel.\\
+A decomposição de intervalos reais pela união de outros é relevante para mostrar a seguinte equivalência sobre a \sigal de Borel.\\
 \begin{theorem}
 \label{teo:equiv-borel}
-    Uma \sigal é uma de Borel  se, e somente se, é gerada por intervalos do tipo $(a,b)$ com $a,b \in \R$.
+    Uma \sigal é de Borel  se, e somente se, é gerada por intervalos do tipo $(a,b)$ com $a,b \in \R$.
 \end{theorem}
 
 \begin{prova}
    Suponha que $(\R,\borel)$ é um espaço mensurável. 
    Sejam $a$ e $b$ números reais, com $a<b$.
    Como $a - \dfrac{1}{n} \in \R$ para todo $n \in \N$, temos que o intervalo
-   $\left(-\infty, a- \dfrac{1}{n}\right) \subset \R$ para todo $n \in \N$.
+   $\left(-\infty, a- \dfrac{1}{n}\right) \in \borel$ para todo $n \in \N$.
    Segue, pela proposição \ref{prop:interseção-elementos-sigmas}, que
-   $\displaystyle \bigcap_{n = 1}^n \left(-\infty, a- \dfrac{1}{n}\right) \in \cc$.
+   $\displaystyle \bigcap_{n = 1}^\infty \left(-\infty, a- \dfrac{1}{n}\right) \in \borel$.
    Com isso, afirmamos que a interseção de todos os intervalos $\left(-\infty, a - \dfrac{1}{n}\right)$ é igual ao intervalo $(-\infty, a]$.
    De fato,
    \begin{align*}
    		x \in \bigcap_{n \in \N} \left(-\infty, a - \dfrac{1}{n}\right)
-   		\Leftrightarrow & x \in \left(-\infty, a - \dfrac{1}{n}\right), \ \forall n \in \N\\
-   		\Leftrightarrow & x < a - \dfrac{1}{n}, \ \forall n \in \N\\
-   		\Leftrightarrow & \dlim_{n \to \infty} x \leq \dlim_{n \to \infty} \left(a - \dfrac{1}{n}\right)\\
+   		\Leftrightarrow & x \in \left(-\infty, a - \dfrac{1}{n}\right), \ \forall \ n \in \N\\
+   		\Leftrightarrow & x < a - \dfrac{1}{n}, \ \forall \ n \in \N\\
+   		\Leftrightarrow & \dlim_{n \to +\infty} x \leq \dlim_{n \to +\infty} \left(a - \dfrac{1}{n}\right)\\
    		\Leftrightarrow & x \leq a\\
    		\Leftrightarrow & x \in (-\infty, a].
    \end{align*}
@@ -349,10 +320,12 @@ Embora a decomposição de intervalos reais pela união de outros é extremament
 \section{Funções Mensuráveis}
 
 
-Agora que já estamos familiarizados com os conceitos de \sigal e espaços mensuráveis, vamos aplicar, sobre este espaço uma função e estudar seu comportamento.
-\footnote{Em todo o texto função, aplicação e mapa são sinônimos.}
-Iniciaremos tratando de funções à valores reais e estenderemos o conceito conforme haja necessidade.
-Além disso, a partir de agora, fixemos que quando não houver menção contrária,  que $X$ será um conjunto qualquer diferente de $\varnothing$ e $\mathcal{C}$ será uma \sigal desse conjunto. 
+Agora que já estamos familiarizados com os conceitos de \sigal e espaços mensuráveis, vamos aplicar, sobre este espaço uma função e estudar seu comportamento
+%
+\footnote{Em todo o texto função e aplicação são sinônimos.}.
+%
+Iniciaremos tratando de funções reais e estenderemos o conceito conforme haja necessidade.
+A partir de agora fixemos que, quando não houver menção contrária, $X$ será um conjunto qualquer diferente de $\varnothing$ e $\mathcal{C}$ será uma \sigal desse conjunto. 
 
 \begin{definition}
 	\label{def:mensurabilidade-funções-reais}
@@ -375,6 +348,7 @@ Assim
 	\end{enumerate}
 Em todo caso, para todo $\alpha \in \R$, o conjunto  $\{x \in X;\ f(x) > \alpha\} \in \mathcal{C}$.
 Portanto, a função constante $f$ é $\cc$-mensurável.
+
 \begin{example}[Função Característica]
     Seja $(X, \mathcal{C})$ uma espaço mensurável e $A \in \mathcal{C}$.
     A função característica \footnote{As vezes também é chamada  função indicadora.} de $A$ 
@@ -384,14 +358,14 @@ Portanto, a função constante $f$ é $\cc$-mensurável.
          0, & \textrm{\ se \ } x \notin A
     \end{array}\right.
     $$
-    É $\cc$-mensurável.
+    é $\cc$-mensurável.
 \end{example}
 
 Para verificar se $X_A$ é $\cc$-mensurável precisamos, novamente, analisar os casos de $\alpha \in \R$.
 	\begin{enumerate}[label*= (\Roman*)]
 		\item Se $\alpha \geq 1$, observamos que $\{x \in X; \chi_A(x)>  \alpha\} = \varnothing$, pois não há $x \in X$ tal que $\chi_A(x) > 1$.  
-		\item Se $ 0 <\alpha < 1$, então o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = A$, pois apenas valores $x \in A$ tem suas imagens $\chi_A(x) = 1$ e consequentemente $\chi_A(x) \geq \alpha$.
-		\item  se $\alpha \leq 0$, podemos notar que o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = X$, pois para qualquer que seja $x \in X$, os valores $\chi_A(x) \geq 0$.
+		\item Se $ 0 \leq \alpha < 1$, então o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = A$, pois apenas valores $x \in A$ tem suas imagens $\chi_A(x) = 1$ e consequentemente $\chi_A(x) \geq \alpha$.
+		\item  se $\alpha < 0$, podemos notar que o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = X$, pois para qualquer que seja $x \in X$, os valores $\chi_A(x) \geq 0$.
 	\end{enumerate}
 Em todo o caso, vemos que o conjunto $\{x \in X; \chi_A(x)>  \alpha\}$ é um elemento de $\mathcal{C}$, pois $\varnothing, X$ e $A$ são elementos de $\mathcal{C}$. Portanto, a função característica $\chi_A(x)$ é $\cc$-mensurável.
 \begin{example}
@@ -407,9 +381,6 @@ Em todo o caso, vemos que o conjunto $\{x \in X; \chi_A(x)>  \alpha\}$ é um ele
 	\footnote{Em caso de dúvida sobre o que é um subconjunto $X$ de $\R$ aberto, consulte \supercite{elon}{p.164}.}, então o conjunto $A = \{a \in X;\ f(a)>k\}$ é um aberto (p.226).
 \end{proposition}
 
-	Note que o conjunto $\{x \in \R; f(x) > \alpha\} = (\alpha, +\infty)$.
-	Logo, trata-se de um conjunto aberto.
-	\footnote{Vide \supercite{elon}{p.164}.}
 	Além disso, em \supercite{elon}{p.167}, encontramos o seguinte teorema:
 	
 	\begin{theorem}[Estrutura de abertos da reta]
@@ -418,7 +389,7 @@ Em todo o caso, vemos que o conjunto $\{x \in X; \chi_A(x)>  \alpha\}$ é um ele
 	\end{theorem}
 	
 	Segue disso que o
-	$\{x \in \R; f(x) > \alpha\} = \displaystyle \bigcup_{j = 1}^\infty A_n$ onde cada $A_n$ é um intervalo aberto, ou seja $A_n \in \borel$ para todo $n \in \N$.
+	$\{x \in \R; f(x) > \alpha\} = \displaystyle \bigcup_{j = 1}^\infty A_n$ onde cada $A_n$ é um intervalo aberto, ou seja, $A_n \in \borel$ para todo $n \in \N$.
 	Com isso, pela definição \ref{def:sigma-algebra}, o conjunto $\{x \in \R; f(x) > \alpha\} \in \borel$.
 	Portanto, qualquer função contínua $f: \R \to \R$ é Borel mensurável.
 
@@ -486,6 +457,10 @@ Portanto, segue de $(I), (II)$ e $(III)$ que as afirmações $(a), (b), (c)$ e $
 Perceba que mesmo na presença do teorema \ref{teo:equiv-funcoes-mensuraveis} acima, mostrar que uma função é mensurável é trabalhoso e repetitivo uma vez que, geralmente, é preciso verificar os casos de $\alpha$.
 Com o intuito de otimizar a identificação de uma função mensurável, veremos o comportamento de operações aritméticas entre funções mensuráveis.
 
+
+%%
+% PAREI A CORREÇÃO AQUI!!
+%%
 \begin{proposition}
 \label{prop:aritmetica-uma-funcao}
 Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as funções $cf$, $f^2$ e $|f|$ são $\cc$-mensuráveis. 
@@ -507,7 +482,7 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
                     
                 Isso ocorre para todo $\alpha$ e $f$ é $\cc$-mensurável, isto é, $\left\{x \in X; f(x) > \dfrac{\alpha}{c}\right\} \in \mathcal{C}$  . Logo, $cf$ é $\cc$-mensurável.
                 
-                \item Por fim, se $c < 0$, então existe um $z \in \R$ tal que $c = -z$.
+                \item Por fim, se $c < 0$, então existe um $ 0 < z \in \R$ tal que $c = -z$.
                 Assim, 
                 $$cf(x) >\alpha \Leftrightarrow -zf(x) >\alpha \Leftrightarrow f(x) < -\dfrac{\alpha}{z}$$
                 Assim, o conjunto $\{x \in X; cf(x) > \alpha \} = \left\{x \in X; f(x) < -\dfrac{\alpha}{z}\right\}$.
@@ -518,36 +493,26 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
             \begin{enumerate}[label = (\roman*)]
                 \item Se $\alpha < 0$, então $\{x \in X; [f(x)]^2 > \alpha\} = X$, pois $[f(x)]^2 \geq 0$ para todo $x \in X$.
                 
-                \item Se $\alpha \geq 0$, então para todo $x \in X$ $[f(x)]^2 > \alpha \Leftrightarrow f(x) > \pm \sqrt{\alpha}$.
+                \item Se $\alpha \geq 0$, então para todo $x \in X$ $[f(x)]^2 > \alpha \Leftrightarrow f(x) > \sqrt{\alpha}$ ou $f(x) < -\sqrt{\alpha}$.
                 Assim, um elemento 
-                $x_0 \in \{x \in X; [f(x)]^2 > \alpha\}$ se, e somente se, $x_0 \in \{x \in X; f(x)> \sqrt{\alpha}\}$ ou \linebreak $x_0 \in \{x \in X; f(x)> -\sqrt{\alpha}\}$.
+                $x_0 \in \{x \in X; [f(x)]^2 > \alpha\}$ se, e somente se, $x_0 \in \{x \in X; f(x)> \sqrt{\alpha}\}$ ou \linebreak $x_0 \in \{x \in X; f(x)< -\sqrt{\alpha}\}$.
                 Com isso, 
                 
-                $$\left\{x \in X; [f(x)]^2 > \alpha\right\} = \left\{x \in X; f(x)> \sqrt{\alpha}\right\}\cup \left\{x \in X; f(x)> -\sqrt{\alpha}\right\}$$
+                $$\left\{x \in X; [f(x)]^2 > \alpha\right\} = \left\{x \in X; f(x)> \sqrt{\alpha}\right\}\cup \left\{x \in X; f(x)< -\sqrt{\alpha}\right\}$$
                 
-                Como $f$ é $\cc$-mensurável por hipótese, temos que $\{x \in X; f(x)> \sqrt{\alpha}\} \in \mathcal{C}$ e \linebreak $\{x \in X; f(x)> -\sqrt{\alpha}\} \in \mathcal{C}$.
-                Desta forma, usando a definição de \sigal, obtemos que  $\{x \in X; f(x)> \sqrt{\alpha}\} \cup \{x \in X; f(x)> -\sqrt{\alpha}\} \in \mathcal{C}$. Consequentemente, 
+                Como $f$ é $\cc$-mensurável por hipótese, temos que $\{x \in X; f(x)> \sqrt{\alpha}\} \in \mathcal{C}$ e \linebreak $\{x \in X; f(x)< -\sqrt{\alpha}\} \in \mathcal{C}$.
+                Desta forma, usando a definição de \sigal, obtemos que  $\{x \in X; f(x)> \sqrt{\alpha}\} \cup \{x \in X; f(x)< -\sqrt{\alpha}\} \in \mathcal{C}$. Consequentemente, 
                 $\{x \in X; [f(x)]^2 > \alpha\} \in \mathcal{C}$ acarretando a mensurabilidade de $f^2$.
             \end{enumerate}
             
         \item Analogamente ao item anterior, se $\alpha < 0$, $\{x \in X; |f(x)| > \alpha\} = X$.
         Por outro lado, se $\alpha \geq 0$, vemos que 
-        $\{x \in X; |f(x)| > \alpha\}=\{x \in X; f(x)> \alpha\} \cup \{x \in X; f(x)> -\alpha\}$.
+        $\{x \in X; |f(x)| > \alpha\}=\{x \in X; f(x)> \alpha\} \cup \{x \in X; f(x)< -\alpha\}$.
         Assim, a mensurabilidade de $f$ acarreta na mensurabilidade de $|f|$ como desejávamos.
     \end{enumerate}
 \end{prova}
 
 % Exemplo de funções mensuráveis com aritmética
-\begin{example}[Função Afim]
-\label{ex:funcao-afim-mensuravel}
-    Seja $a$ um número real diferente de zero. 
-    A função $f: \R \to \R$ tal que $f(x) = ax$ é $\borel$-mensurável.
-\end{example}
-	
-	De fato, pelo exemplo \ref{ex:função-continua-mensuravel} a função $x$ é $\borel$-mensurável, pois é contínua em $\R$.
-	Segue pela proposição \ref{prop:aritmetica-uma-funcao} que a função $ax$ também é $\borel$-mensurável.
-	Da maneira análoga, as funções $g,h: \R \to \R$ tais que $g(x) = x^2$ e $h(x) = |x|$ são $\borel$-mensuráveis. 
-	A seguir veremos a mensurabilidade de combinações de funções mensuráveis.
 
 
 \begin{proposition}
@@ -594,18 +559,12 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
 	        =& \ (f(x) +g(x))^2 - (f(x) - g(x))^2\\
 	        =& \ [(f+g)(x)]^2 - [(f-g)(x)]^2.
 	    \end{align*}
-    Desta maneira, $fg = \dfrac{1}{4}\left[(f+g)^2 - (f-g)^2\right]$. Segue pela proposição \ref{prop:aritmetica-uma-funcao} e a primeira parte desta demonstração que $fg$ é $\cc$-mensurável.
+    Logo, $fg = \dfrac{1}{4}\left[(f+g)^2 - (f-g)^2\right]$.
+    Note que  $f-g$ é mensurável, pois sendo $g$ mensurável, podemos usar a proposição \ref{prop:aritmetica-uma-funcao} pondo $c= -1$.
+    Assim, temos $(-1)g = -g$. Logo, $-g$ é mensurável.
+    Além disso, pela parte \textit{(a)}, desta proposição, $f - g = f+ (-g)$.
+    Segue que $fg$ é $\cc$-mensurável.
 \end{prova}
-
-\begin{example}[Função Polinomial]
-\label{ex:funcao-polinomial-mensuravel}
-    A função  $f:\R \to \R$ definida por $f(x) = \displaystyle \sum_{j = 0}^n a_jx^j$ com cada $a_j \in \R$ é $\borel$-mensurável.
-\end{example}
-   
-    Com efeito, note que  $f(x) = a_nx^n + a_{n-1}x^{n-1} + \cdots + a_1x +a_0$.
-	Pelo exemplo \ref{ex:funcao-afim-mensuravel} cada função $f_j:\R \to \R$ definida por  $f_j(x) = a_jx^j$ é $\borel$-mensurável.
-	Além disso, pela proposição \ref{prop:aritmetica-duas-funcoes} a soma de funções mensuráveis é mensurável.
-	Segue que $f(x) = \displaystyle\sum_{j = 0}^n a_jx^j$ é uma função $\borel$-mensurável.
 
 \begin{definition}
 	\label{def:parte-positiva e negativa}
@@ -623,7 +582,7 @@ Numa tentativa de esclarecer ao máximo, daremos o seguinte exemplo:
 
 De fato, ao tomarmos um elemento real $x< 0$, vemos que sua imagem $f(x) < 0$ sendo $f(x) = \dfrac{-x}{x} = -1$.
 Se $x>0$, então $f(x) =\dfrac{x}{x} = 1$. 
-Assim, $f^+ = \sup\{f(x), 0\} = 1$ enquanto que $f^- = \sup\{-f(x), 0\} = -1$.
+Assim, $f^+(x) = \sup\{f(x), 0\} = 1$ enquanto que $f^-(x) = \sup\{-f(x), 0\} = -1$.
 Neste caso, podemos perceber, ao olhar para a imagem \ref{fig: Gráfico da Função f(x) =|x|/x} a seguir que tanto a parte positiva quanto a parte negativa da função $f$ acima apresentada são ambas funções constantes.\\
 
     \begin{figure}[h!]
@@ -658,13 +617,13 @@ Por serem constantes, já vimos que são mensuráveis.
 Mas e a função $f(x) =\dfrac{|x|}{x}$? Será que é mensurável?
 A resposta é sim e para mostrarmos isso precisaremos de alguns resultados auxiliares. 
     \begin{lemma}
-    \label{lem:decomposicao-da-funcao-em-partes-positiva-negativa}
+    \label{lem:f = f^+ - f^-}
         Seja $f: X \to \R$ uma função real. Então $f = f^+ - f^-$ e $|f| = f^+ + f^-$.
     \end{lemma}
     \begin{prova}
             Para provar que $f = f^+ - f^-$, devemos avaliar os casos de $f(x)$. 
             Logo, se $f(x) \geq 0$, então $f^+(x) = \sup\{f(x), 0\} = f(x)$ e $f^-(x) = \sup\{-f(x), 0\} = 0$, pois $f(x) \geq 0 \Rightarrow  - f(x) \leq~0$.
-            Disso, $f^+(x) - f^-(x) = f(x) - 0 = f(x)$, ou seja, $(f^+ - f^-)(x) = f(x), \ \forall x \in X$.
+            Disso, $f^+(x) - f^-(x) = f(x) - 0 = f(x)$, ou seja, $(f^+ - f^-)(x) = f(x),  \forall \ f(x) \geq 0$.
             Caso $f(x) <~0$, então $- f(x) > 0$. 
             Com isso,  $\sup\{f(x), 0\} = 0$ e $\sup\{-f(x), 0\} = -f(x)$.
             Desta forma vemos que
@@ -701,11 +660,9 @@ Isso demonstra o lema adiante:
     \begin{prova}
         Suponha que $f$ seja $\cc$-mensurável.
         Pela proposição \ref{prop:aritmetica-uma-funcao} vemos que a função $|f|$ é $\cc$-mensurável e pelo lema \ref{prop:identidades-das-partes-das-funcoes} as funções $f^+ = \dfrac{1}{2}(|f| + f)$ e $f^+ = \dfrac{1}{2}(|f| - f)$ também são $\cc$-mensuráveis.
-        Desta forma, as funções $f^+$ e $f^-$ são combinações aritméticas de funções $\cc$-mensuráveis.
-        Segue pela proposição \ref{prop:aritmetica-duas-funcoes} que $f^+$ e $f^-$ são $\cc$-mensuráveis.
         Reciprocamente, supondo que $f^+$ e $f^-$ são mensuráveis, temos pelo lema \ref{lem:decomposicao-da-funcao-em-partes-positiva-negativa} que
         $f = f^+ - f^-$. Segue, novamente pela proposição \ref{prop:aritmetica-duas-funcoes}, que $f$ é $\cc$-mensurável. 
     \end{prova}
 
-Uma vez que foram apresentadas as definições de \sigal, espaços mensuráveis e funções mensuráveis; nosso alicerce está totalmente consolidado para que possamos entender o que é uma medida medida sem muita dificuldade.
+Uma vez que foram apresentadas as definições de \sigal\hspace{-0.1cm}, espaços mensuráveis e funções mensuráveis, nosso alicerce está totalmente consolidado para que possamos entender o que é uma medida sem muita dificuldade.
 Isso faremos na seção seguinte.
