Introdução - Finalização da Pergunta Norteadora

--- a/documento.tex
+++ b/documento.tex
@@ -181,7 +181,7 @@
 	
 	%Elementos textuais
 	\textual
-	% \input{elementos-textuais/1Introdução}
+		\input{elementos-textuais/1Introdução}
         %\input{elementos-textuais/fundamentos}
         %\input{elementos-textuais/espaços}
         % \input{elementos-textuais/5objetivos}
