--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -38,6 +38,16 @@ address = "São Paulo",
 publisher = "Atlas S. A",
 note     = "Disponível em:  \url{https://files.cercomp.ufg.br/weby/up/150/o/Anexo_C1_como_elaborar_projeto_de_pesquisa_-_antonio_carlos_gil.pdf}. Acesso em: 30 de dez. 2021"
 }.
+
+@book{boy,
+author = "Carl B. Boyer ",
+title = "\textbf{História da Matemática}",
+year = 2012,
+edition = 3,
+address = "São Paulo",
+publisher = "Blucher"
+}.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{BROLEZZI,
@@ -79,14 +89,6 @@ publisher = {Feevale}
 
 
 
-@book{Boy,
-author = "Carl B. Boyer ",
-title = "\textbf{História da Matemática}",
-year = 2012,
-edition = 3,
-address = "São Paulo",
-publisher = "Blucher"
-}.
 
 
 
