--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -11,14 +11,62 @@
 %c) Apresentar algumas possibilidades de demonstrações para casos de aplicações da convergência de sequências de números reais no Cálculo Diferencial e Integral.
 
 \chapter{Introdução}
-    Para que a ação desejada tenha total eficácia é indispensável a projeção de um plano. 
-    Como menciona Gondim et al (2010, p.41) 
-    \enquote{[...] seu papel  semelhante àquele desempenhado pela planta de uma cidade, ou seja, é um guia básico para quem quer conhece-la ou si chegar ao seu destino com eficiência}
-    Neste texto apresenta-se o Projeto de Trabalho de Conclusão de Curso do aluno de Licenciatura em Matemática pela Universidade Estadual do Ceará Cícero Moreira Hitzschky Filho.
-
-    Dito isso, é apresentado neste projeto é apresentado o que levara ao autor realizar a escolha do tema, bem como suas motivações para tal.
-    Adiante, o autor justifica esta escolha expondo a relevância do tema escolhido, bem como suas possíveis aplicações.
-    Em seguida, ele faz uma fundamentação teórica sobre o tema e apresenta o que ele pretende na realização da sua pesquisa.
-
-    Por fim, é apresentado os procedimentos bem como o passo a passo que o autor pretende fazer na realização de sua pesquisa.
-    O cronograma desses procedimento também é apresentado ao passo que é apresentado uma possível estruturação de seu futuro trabalho.
+    Conseguir medir grandezas é essencial em nosso cotidiano.
+    Medimos tempo, distância, velocidade, etc.
+    Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga.
+    Conforme Boyer (2012), os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
+    com essa habilidade, fizeram feitos extraordinários como o calendário solar e a construção das pirâmides.
+    Desde então vem-se trabalhando no avanço da teoria da medida tanto de forma prática como de forma teórica.
+    
+    As aplicações mais teóricas de medida vieram com os estudos de Newton que trataram sobre taxa de variação de quantidades continuamente variáveis tais como
+    comprimentos, áreas e volumes; tendo desenvolvido, também, um método para calcular a soma das ordenadas sob uma curva (Boyer, 2012). 
+    Embasando-se no mesmo autor, vemos que esse método recebeu o nome de integral e foi denotado, por Leibniz, como $\int$; essa definição de integral foi refinada por Riemann e é, nos dias de hoje, comumente chamada de Integral de Riemann. 
+    
+    Pelo fim do século XIX, muitos matemáticos buscavam refutar teoremas já estabelecidos por meio de contraexemplos construídos por funções \enquote{patológicas}(Boyer, 2012).
+    Isso gerou um grande movimento matemático, no século XX, que tinha como objetivo trazer rigor à matemática.
+    Foi nesse movimento que o matemático francês Henri Lebesgue (1875-1941) notou aplicações limitadas da integral de Riemann através do seguinte pensamento:
+    
+    \begin{citlon}
+    	Lebesgue, refletindo sobre o trabalho de Borel sobre conjuntos, viu que a definição de Riemann de integral tem o defeito de só se aplicar a casos
+    	excepcionais, pois assume não mais que uns poucos pontos de descontinuidade para a função.
+    	Se uma função $y = f(x)$ tem muitos pontos de descontinuidade, então, à medida que o intervalo $x_{i+1} - x_i$
+    	se torna menor, os valores $f(x_{i+1})$ e $f(x_i)$ não ficam
+    	necessariamente próximos (Boyer, 2012, p.416).  	
+    \end{citlon}
+    
+    Para resolver este problema, Lebesgue decidiu inverter a ordem da construção que Riemann fizera:
+    
+    \begin{citlon}
+    	Em vez de subdividir o domínio da variável independente, Lebesgue dividiu, portanto, o campo de variação $\overline{f} - f$ 
+    	da função em subintervalos $\Delta y_i$ e em cada subintervalo
+    	escolheu um valor $\eta_1$. 
+    	Então, achou a \enquote{medida} $\mu(E_i)$ do conjunto $E_i$ dos pontos do eixo $x$ para os
+    	quais os valores de $f$ são aproximadamente iguais a $\eta_1$(Boyer, 2012, p.416).
+    \end{citlon}
+    
+    A integral que foi gerada por meio da construção anterior recebeu o nome de Integral de Lebesgue que é o tema deste trabalho.
+    
+    Realizando uma pesquisa com a frase \enquote{ensino de cálculo diferencial e integral} na Biblioteca Digital Brasileira de Teses e Dissertações (BDTD), sem
+    aspas, foram retornados 310 resultados na data do dia 29 de Outubro de 2023 às 10 horas da manhã.
+    Ao observar título e resumo dos trabalhos retornados como resultado da busca, nenhum deles tratava a integral de Lebesgue para alunos de graduação em ciências exatas.
+    Grande parte dos trabalhos eram voltados à reflexão do ensino de cálculo diferencial e integral na perspectiva de Rienmann ou aplicações dela.
+    Mediante esta ausência, surge o seguinte questionamento: de que forma pode ser apresentada a teoria da medida e integração de Lebesgue para alunos de graduação de ciências exatas?
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
