Introdução e Considerações Finais quase acabadas aguardando orientações da Carol 29/10

--- a/documento.tex
+++ b/documento.tex
@@ -190,6 +190,7 @@
         \input{elementos-textuais/espacos-funcoes-mensuraveis}
         \input{elementos-textuais/teoria-medida}
         \input{elementos-textuais/teoria-integracao}
+        \input{elementos-textuais/considerações-finais}
         %Elementos pós-textuais	
 	\bibliography{elementos-pos-textuais/referencias}
 %	\imprimirapendices
