--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -14,8 +14,8 @@
 % Justificativa
     Conseguir medir grandezas é essencial em nosso cotidiano.
     Medimos tempo, distância, velocidade, etc.
-    Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga.
-    Conforme Boyer (2012), os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
+    Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga sendo datada, por exemplo, em 3100 a.C.
+    Em relação à essa época, Boyer (2012) expõe que os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
     com essa habilidade, fizeram feitos extraordinários como o calendário solar e a construção das pirâmides.
     Desde então vem-se trabalhando no avanço da teoria da medida tanto de forma prática como de forma teórica.
     
@@ -53,10 +53,10 @@
     aspas, foram retornados 310 resultados na data do dia 29 de Outubro de 2023 às 10 horas da manhã.
     Ao observar título e resumo dos trabalhos retornados como resultado da busca, nenhum deles tratava da integral de Lebesgue para alunos de graduação em ciências exatas.
     Grande parte dos trabalhos eram voltados à reflexão do ensino de cálculo diferencial e integral na perspectiva de Riemann ou aplicações dela.
-    Mediante esta ausência, esta pesquisa levanta o seguinte questionamento: de que forma pode ser apresentada a teoria da medida e integração de Lebesgue de maneira elementar para os alunos de graduação de ciências exatas?
+    Mediante esta ausência, esta pesquisa levanta o seguinte questionamento: de que forma pode ser apresentada a teoria da medida e integração de Lebesgue de maneira elementar para os alunos de graduação em ciências exatas?
     
     % Objetivos Gerais e Específicos
-    Com base nisso, o objetivo geral desta pesquisa é conhecer a algumas definições e resultados da teoria da medida e da integração de Lebesgue de forma elementar.
+    Com base nisso, o objetivo geral desta pesquisa é conhecer algumas definições e resultados da teoria da medida e da integração de Lebesgue de forma elementar.
     Esse estudo estabeleceu três objetivos específicos: 
     definir a base do estudo da teoria da medida por meio dos espaços mensuráveis,
     conhecer a teoria da medida de maneira generalizada e descrever o processo da construção da integral de Lebesgue mediante o avanço da teoria da medida.
@@ -64,19 +64,19 @@
     % Prévias dos capítulos
   	
   	Na primeira seção definimos toda a base de nosso estudo tratando dos conceitos de $\sigma$-álgebra, espaços mensuráveis e funções mensuráveis.
-  	Todos esses conceitos são fixados por meio de exemplos.
+  	Todos esses conceitos são vastamente explorados por meio de exemplos.
   	Em particular, é apresentado a $\sigma$-álgebra de Borel, bem como é revisado a estrutura de conjuntos abertos na reta numérica.
   	Também mostramos propriedades aritméticas e resultados sobre funções mensuráveis.
   	Por fim, a seção é finalizada com os conceitos de parte positiva e parte negativa de uma função real.
   	
-  	Adiante, apresentamos, na segunda seção, a teoria da medida. 
+  	Adiante apresentamos, na segunda seção, a teoria da medida. 
   	Para isso, iniciamos com uma generalização dos conceitos da seção anterior utilizando a reta real estendida.
   	Estendemos as definições e resultados de funções mensuráveis para valores reais estendidos.
-  	Encerramos a seção apresentando o conceito geral de medida sobre um espaço mensurável apontando exemplos tais como a função de probabilidade e a medida de um conjunto discreto.
+  	Encerramos a seção apresentando o conceito geral de medida sobre um espaço mensurável apontando exemplos interdisciplinares tais como a função de probabilidade e a medida de um conjunto discreto.
   	
-  	Na última seção, mostramos a construção da integral de Lebesgue para funções simples, funções mensuráveis não negativas e funções mensuráveis quaisquer.
+  	Na última seção, mostramos a construção da integral de Lebesgue para funções simples, funções mensuráveis não negativas e funções mensuráveis quaisquer, respectivamente.
   	Desenvolvemos propriedades e condições de integrabilidade ressaltando teoremas relevantes como o Teorema da Convergência Monótona e o Lema de Fatou.
-  	Posteriormente abordamos um vasto número de proposições e propriedades sobre integrais sendo a seção terminada com o Teorema da Convergência Dominada de Lebesgue.
+  	Posteriormente abordamos um vasto número de proposições e propriedades sobre integrais com a finalidade de familiarização sendo a seção terminada com o Teorema da Convergência Dominada de Lebesgue.
   	
   
   	% Metodologia
@@ -84,7 +84,7 @@
   	A pesquisa que foi realizada tem natureza básica, pois segundo Prodanov et al. (\citeyear{profreitas}, p.51) uma pesquisa básica
   	\enquote{objetiva gerar conhecimentos novos úteis para o avanço da ciência sem aplicação prática prevista. Envolve verdades e interesses universais}. 
   	
-  	Além disso, de acordo com o mesmo autor a pesquisa também constou com uma abordagem quantitativa  vez que os fatos podem ser relevados fora de uma complexidade social, econômico e político(\citeyear{profreitas}). 
+  	Além disso, de acordo com o mesmo autor, a pesquisa também constou com uma abordagem quantitativa uma vez que os fatos podem ser relevados fora de uma complexidade social, econômica e política (Prodanov et al.,\citeyear{profreitas}). 
   	Pode-se observar, ainda, que a pesquisa teve objetivo exploratório, pois segundo \citeauthor{gil}:
   	
   	\begin{citlon}
@@ -97,7 +97,7 @@
   	\end{citlon}
   	
   	Como fora supracitado, pode-se atribuir vários procedimentos técnicos à pesquisas exploratórias. 
-  	O procedimento técnico foi realizado por meio de uma pesquisa bibliográfica devido ser elaborada com base em material já publicado (\citeauthor{gil}, \citeyear{gil}).
+  	O nosso procedimento técnico foi realizado por meio de uma pesquisa bibliográfica devido ser elaborada com base em material já publicado (\citeauthor{gil}, \citeyear{gil}).
   	
   	
     [AQUI FALTA POR UM RESUMO DA CONCLUSÃO QUE NÃO FIZ AINDA!!!!!!!!]
